CSS/Portfolio.css
/* IMPORTING FONT  */

@font-face {
    font-family: AvenireNextLTPro;
    src: url(AvenirNextLTPro-Regular.otf);
}
  
*{
    font-family: AvenireNextLTPro;
}

/* NAVBAR CSS */


.nav-item{
    font-size: 1.1em;
    transition: all 0.2s;
    cursor: pointer;
}





.navItemActive{
    font-size: 1.2em;
    font-weight: bold;
    color:black;
    border-bottom: 3px solid #017CFF;  
    margin-bottom: -10px;
}

.certificationslink{
    text-decoration: none!important;
    font-weight: bold;
    transition: all 0.2s;
    font-size: 1.1rem;
    margin-left: 3vw;
}

.certificationslink:hover{
    color:#017CFF!important;
}

@media screen and (max-width:600px){
    .nav-item{
        font-size: 6vw;
        transition: all 0.3s;
        cursor: pointer;
    }

    .nav-item:hover{
        color:#017CFF;
        font-weight: bold;
        border-bottom: none;  
        font-size: 1.3em;
        margin-bottom: 0px;
    }
}


/* DIVISON 1 CSS  */

#div1{
    height: 100vh;
    overflow: hidden;
      
    margin-top:6%
}

.responsive {
    width: 120%;
    height: 100%;
    margin-top: -10%;
}


#div1s{
    height: 95vh;
    margin-top:18%;
}


/* DIVISON 2 CSS */

#div2{
    height: 100vh;
    overflow: hidden;
    padding-left:7%;
    padding-right:2%;
    padding-top:7%;
    padding-bottom:5%
}

hr{
    background-color: rgb(226, 226, 226);
    padding:7px;
    border-radius: 10px;
}



@media screen and (max-width:600px){
    #div2{
        height: 140vh;
    }
}

/* DIV3 CSS */

#div3{
    height: 150vh;
    margin-top: 50px;
}

@media screen and (max-width:600px){
    #div3{
        height: 160vh;
    }

    .certificationslink{
        text-align: center;
        width: 100%;
    }
}


/* DIV4 CSS */

#div4{
    height: 80vh;
}

.prjCard{
    border-radius:10px;
    box-shadow: 0px 0px 10px rgb(184, 184, 184);
}

.cardCont{
    padding: 15px;
}

@media screen and (max-width:600px){

    .prjCard{
        margin-top:10%;
    }

    #div4{
        height: 210vh;
    }
}

footer{
    background-color: rgb(211, 211, 211);
    padding-top:25px;
    padding-bottom: 5px;
}

